# pe-memory-mimicry

./: CMakeLists.txt  README.md  filesize.ps1  main.c
sheep_monitor/: CMakeLists.txt  main.cpp
